--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "mrwhy233/tryhard.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "222.jpg"
   name             : "Nie Minlu"
   pronouns         : # example: "she/her"  
   bio              : "Network Engineering graduate from Jimei University, working in the Network Operations Department at China Unicom Fujian, dedicated to optimizing network performance and service quality."
