--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : "https://www.instagram.com/liye666233?igsh=MWUwcnNnM2w1NTFjYw%3D%3D&utm_source=qr"
+  instagram        : "liye666233"
   lastfm           : # Username
   linkedin         : # Username
   mastodon         : # URL
